# ansible-role-tripleo-collect-logs

./: README.md  groups  project.config  setup.cfg
configs/: centosci-logs.yml
configs/doc_generation/: minimal-virt-deployment.yml  ovb-openstack-cloud.yml  virt-undercloud-baremetal-overcloud.yml
defaults/: main.yml
doc/configs/: virt-undercloud-baremetal-overcloud.conf
docs/source/: conf.py
docs/static/: env-setup-virt.rst
docs/static/baremetal-overcloud/: copying-customized-files.rst  customizing-undercloud-conf.rst  env-setup.rst  introduction.rst  networking.rst  requirements-networking.rst
docs/static/ovb-openstack-cloud/: calling-quickstart.rst  introduction.rst  running-quickstart-instances-openstack.rst
playbooks/: collect-logs.yml
roles/common/defaults/: main.yml
roles/tripleo-collect-logs/defaults/: main.yml
roles/tripleo-collect-logs/tasks/: main.yml
roles/tripleo-publish-logs/defaults/: main.yml
roles/tripleo-publish-logs/tasks/: main.yml
scripts/: doc_extrapolation.awk
tasks/: collect.yml  create-docs.yml  main.yml  publish.yml
templates/: index.rst.j2
