[metadata]
name = ansible-role-tripleo-collect-logs
summary = ansible-role-tripleo-collect-logs - An Ansible role for aggregating OpenStack deployment and testing logs
description-file =
    README.md
author = RDO-CI Team
author-email = bultel@redhat.com, whayutin@redhat.com, harry@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-collect-logs
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    config/general_config = configs/*
    playbooks = playbooks/*
    usr/local/share/ansible/roles = roles/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
